<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <android.widget.Button
        android:layout_height="wrap_content" android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@id/forwardButton"
        android:text="@string/forward"
        style="?android:attr/button"/>

    <android.widget.Button
        android:layout_height="wrap_content" android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="250dp"
        android:id="@id/forwardLeftButton"
        android:text="@string/forwardLeft"/>

    <android.widget.Button
        android:layout_height="wrap_content" android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="250dp"
        android:id="@id/forwardRightButton"
        android:text="@string/forwardRight"/>

    <android.widget.Button
        android:layout_height="wrap_content" android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="310dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="0dp"
        android:id="@id/stopButton"
        android:text="@string/stop"/>

    <android.widget.Button
        android:layout_height="wrap_content" android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="375dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="250dp"
        android:id="@id/backRightButton"
        android:text="@string/backRight"/>

    <android.widget.Button
        android:layout_height="wrap_content" android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="375dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="250dp"
        android:id="@id/backLeftButton"
        android:text="@string/backLeft"/>

    <android.widget.Button
        android:layout_height="wrap_content" android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/backButton"
        android:text="@string/back"/>

</android.support.constraint.ConstraintLayout>